# nginxTest

./: CMakeLists.txt
fake_sensor_demo/: CMakeLists.txt  Makefile  cmake_install.cmake  demo_sensor_server.cpp  fakesensor.h  showCVImage.cpp  showCVImage.h
fake_sensor_demo/website/: cvImage.cpp  cvImage.h  fakesensor.html
showCVImage/: CMakeLists.txt  base64.h  cmake_install.cmake  showCVImage.cpp  showCVImage.h
showCVImage/website/: fakesensor.html
